# proyecto-versionado-de-modelos-de-datos-sql

./: .gitignore  README.md  demo.db  pyproject.toml  requirements.txt  test_models.py
examples/: basic_usage.py
schema_evolver/cli/: main.py
schema_evolver/core/: models.py  vcs.py
schema_evolver/diff/: engine.py
schema_evolver/executor/: __init__.py  engine.py
schema_evolver/parser/: __init__.py  pydantic_parser.py  sqlalchemy_parser.py
schema_evolver/planner/: __init__.py  engine.py
schema_evolver/storage/: repository.py
schema_evolver/utils/: hashing.py  serialization.py
tests/unit/: test_core_models.py  test_planner.py  test_pydantic_parser.py  test_sqlalchemy_parser.py  test_vcs.py
