[project]
name = "schema_evolver"
version = "0.1.0"
description = "A schema versioning and migration intelligence engine."
authors = [{ name = "Senior Python Architect", email = "architect@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
schema-evolver = "schema_evolver.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
