[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-evolver"
version = "0.1.0"
description = "Schema Migration Intelligence Engine for Pydantic and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0"
]

[project.scripts]
schema-evolver = "schema_evolver.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_evolver*"]
